# BingusUtils

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: ManaTanks.hpp  PCH.hpp  xSEPlugin.cpp
src/Common/: Utilities.hpp
src/Common/SKEE/: SKEE.cpp  SKEE.hpp  SKEEInterface.hpp
src/Common/UI/: SKSEMenuFramework.hpp  UIRegistry.hpp  UIUtils.hpp
src/Features/ArmorFactor/: ArmorFactor.cpp  ArmorFactor.hpp
src/Features/ManaTanks/: ManaTanks.cpp  ManaTanks.hpp
src/Features/Misc/: Misc.cpp  Misc.hpp
src/Features/MorphAdjust/: MorphAdjust.cpp  MorphAdjust.hpp
src/Features/NPCUtils/: NPCUtils.cpp  NPCUtils.hpp
src/Features/OverlaySaver/: OverlaySaver.cpp  OverlaySaver.hpp
src/Features/OverlayUtils/: OverlayUtils.cpp  OverlayUtils.hpp
src/Features/QuestUtils/: QuestUtils.cpp  QuestUtils.hpp
src/Features/RMInspector/: RMInspector.cpp  RMInspector.hpp
src/Hooks/: Hooks.cpp
src/Util/Data/Utils/: BasicRecord.hpp  MapRecord.hpp  MapSerializer.hpp  TLVSerializer.hpp  VectorRecord.hpp  VectorSerializer.hpp
src/Util/Events/: EventDispatcher.cpp  EventDispatcher.hpp  EventListener.hpp
src/Util/Logger/: Logger.cpp
src/Util/Text/: Text.cpp  Text.hpp
